add Auth (login + logout) api documentation
